prototype/src/styles/app.css
body {
	background-color: #fff;
	color: #000000;	
	font-family: 'Istok Web', Helvetica, Arial, FreeSans, sans-serif;
	font-size: 0.8em;
	margin: 0px;
}

.title {
  color: #fff;
  font-size: 14pt;
  padding: 5px;
  margin-left: 10px;
}

span {
	font-size: 0.9em;	
}

/* div magic styles */
.left {
	float: left;
	width: auto;
}

.right {
	float: right;
	right: 0px;
	width: 240px;
}

.clear {
	clear: both;
}

.hide {
	display: none;
}

.show {
	display: block;
}

/* toolbar styles */
#tool-bar {
	background: #06f;	
	margin: 0px;
	padding: 0px;		
	position: fixed;
	top: 0px;
	width: 100%;
	height: 32px;
}

/* status bar styles */
#status-bar {
	background: #f9f9f9;	
	border: solid 1px #ccc;  
	margin: 0px;
	padding: 5px;		
	position: fixed;
	top: 32px;
	width: 100%;
	height: 18px;
}

#message {
  color: #666;
  font-weight: normal;
	margin: 0px;	
  padding: 0px;  
}

.error {
	color: #f33;	
	font-size: 12px;
}



/* page content styles */ 
#content {
	margin-top: 64px;
  margin-left: 0px;
	padding: 0px;
	width: 100%;
	overflow: hidden;	
}

/* data vis container styles */
.container {
 padding: 0px;
 margin: 0px;
 width: 100%;
}

.map, .data, .graph {
	background-color: #eee;
	border: solid 1px #AACFE4;
	border-radius: 0px;
	box-shadow: 0px 0px 10px #ccc;	
  overflow: hidden;
}

.data {  
	background-color: #fff;
	overflow-y: scroll;
}

/* data panel styles */

.section-title {
  color: #666;
	font-size: 12px;
  font-weight: bold;
  padding: 0px;
  padding-bottom: 0px;
}

.section-data {
  font-size: 12px;
  padding: 0px;
}

/* list data styles */
ul {
	margin: 5px;
	padding: 0px;
}

ul li {
	list-style-type: none;
	margin: 5px;
}

/* table styles */
td, th {
    padding: 1px 4px;
}

/* footer styles */
#footer {
  background-color: #f9f9f9;
	border: solid 1px #ccc;  
	margin: 0px;
	padding: 5px;		   
	position: fixed;
	bottom: 0px;
	height: 18px;  
  width: 100%;
}

.footer, .label {
	font-size: .8em;	
	color: #333;
	margin: 5px;
}

.date {
	font-size: 0.9em;	
	padding-left: 5px;
}

.link {
	font-size: 0.9em;
	color: #06f;
}

